# HelpfulFunctions

./: .Ue4_Massen_Beschleunigungen.txt.swp  .gitignore  .gitmodules  Git_console_commands.txt  README.md  Ue4_Massen_Beschleunigungen.txt  Unreal_Engine_4.txt  f90_gf.sh  helpful_console_commands.txt  libgnutls26_2.12.20-8+deb7u5_armel.deb  test.txt  vimrc_settings.txt
C/Cpp/VectorIteratingSpeedTest/: .gitignore  CMakeLists.txt  CPUtime.cpp  CPUtime.h  Makefile  debug.pro  debug_result_2600k_4.4Ghz.txt  main.cpp  main.pro  release.pro  release_result_2600k_4.4Ghz.txt
Linux_commands/: .gitignore  AutoCPUFreq.sh  CMakeLists.txt  CPU_480Mhz.sh  CPU_800Mhz.sh  CPU_reset.sh  KernelMessages.sh  change_swappiness_temp.sh  extract_zipfiles.sh  fix_tearing_intel.txt  helpful_console_commands.txt  installGoogleDriveFuse.sh  install_programs.sh  mount_Cryptomator_Tresor.sh  mount_GoogleDrive.sh  mount_Pi.sh  mouse_fix_Ubuntu_1204.sh  networkLog.sh  printTop10BigDirs.sh  remove_old_Kernels.txt  scale_Display.sh  scale_reset.sh  setCPUFreqs.sh  setCpuFreqs.sh  setMaxCPUFreq.sh  show_wlans.sh  wget_help.txt
Linux_commands/BSN1/: rename.sh
Linux_commands/BSN1/Ue08/: http-anfrage.txt
Linux_commands/BSN1/VL01/: .gitignore  examples.sh  notes.sh  softlink_2_example.file
Linux_commands/BSN1/VL03/: notes.sh
Linux_commands/BSN2/: Makefile
Linux_commands/BSN2/Ue01/: DynamicProg.mk  MakeLibs.mk  MakeTestProg.mk  StaticProg.mk  TestProgDynamic.mk  TestProgStatic.mk  dynamicTestProg  file1.c  file1.h  file2.c  (+4 more)
Linux_commands/CreateDummyFiles/: createDummies.sh
Linux_commands/Fritzbox_Reconnect/: loop.sh  reconnect.sh
(+1239 files in other folders)
